fix: (CXSPA-8015) improve tab focus visibility (show all four sides of focused ring) (#19637)
Closes: https://jira.tools.sap/browse/CXSPA-8015

--- a/projects/storefrontstyles/scss/components/content/tab/_tab.scss
+++ b/projects/storefrontstyles/scss/components/content/tab/_tab.scss
@@ -42,6 +42,11 @@
     &:focus {
       z-index: 1;
     }
+    @include forFeature('a11yCroppedFocusRing') {
+      &:focus-visible {
+        outline-offset: -3px;
+      }
+    }
 
     &.active:after,
     &:hover:not([disabled]):after {
@@ -83,6 +88,11 @@
     border-radius: var(--cx-tab-panel-border-radius);
     padding: var(--cx-tab-panel-padding);
     background: var(--cx-tab-panel-bg);
+    @include forFeature('a11yCroppedFocusRing') {
+      &.active:focus-visible {
+        outline-offset: -3px;
+      }
+    }
   }
 
   .tab {
